# my_test_project

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  clean.sh  compile_debug.sh  compile_release.sh  install.sh  uninstall.sh
include/: CustomSum.hpp
src/: CustomSum.cpp
test/: CMakeLists.txt
test/src/: CustomSumTest.cpp
