cmake_minimum_required (VERSION 3.5)
project(my_test_project)

set(MAJOR_VERSION 1)
set(MINOR_VERSION 2)
set(QUICK_START_VERSION_MAJOR ${MAJOR_VERSION})
set(QUICK_START_VERSION_MINOR ${MINOR_VERSION})
file(GLOB_RECURSE SOURCES "${PROJECT_SOURCE_DIR}/src/*.cpp")
file(GLOB_RECURSE HEADERS "${PROJECT_SOURCE_DIR}/include/*.hpp")
set(HEADERS_DIR "${PROJECT_SOURCE_DIR}/include")

include_directories("${HEADERS_DIR}")
add_library(CustomSum STATIC "${SOURCES}")
enable_testing()

add_subdirectory(test)

set_target_properties(CustomSum PROPERTIES PUBLIC_HEADER "${HEADERS}")

install(TARGETS CustomSum DESTINATION lib/${PROJECT_NAME}/static 
	PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE 
	PUBLIC_HEADER DESTINATION lib/${PROJECT_NAME}/static/include)
	

SET(CPACK_GENERATOR "DEB")
SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Ark") #required
SET(CPACK_PACKAGE_VERSION_MAJOR ${MAJOR_VERSION})
SET(CPACK_PACKAGE_VERSION_MINOR ${MINOR_VERSION})
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "my_test_project example debian packaged library with unit test using cmake")
SET (CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
INCLUDE(CPack)


